--- a/index.html
+++ b/index.html
@@ -4,10 +4,86 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Habit tracker</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/933cc7516f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>This is paragraph.</p>
+    <nav>
+      <ul>
+        <div class="left">
+          <li>
+            <a class="logo" href=""><i class="fa fa-solid fa-leaf"></i></a>
+          </li>
+          <li>
+            <a class="page active" href="#">Tasks</a>
+          </li>
+          <li>
+            <a class="page" href="#">Inventory</a>
+          </li>
+          <li>
+            <a class="page" href="#">Shops</a>
+          </li>
+          <li>
+            <a class="page" href="#">Party</a>
+          </li>
+          <li>
+            <a class="page" href="#">Guilds</a>
+          </li>
+          <li>
+            <a class="page" href="#">Group</a>
+          </li>
+          <li>
+            <a class="page" href="#">Challenges</a>
+          </li>
+          <li>
+            <a class="page" href="#">Help</a>
+          </li>
+        </div>
+        <div class="right">
+          <li>
+            <a class="countPage" href="#"
+              ><img src="./img/gem.png" alt="gem icon"
+            /></a>
+          </li>
+          <li>
+            <a class="countPage" href="#">0</a>
+          </li>
+          <li>
+            <a class="countPage" href="#"
+              ><img src="./img/coin.png" alt="coin icon" />
+            </a>
+          </li>
+          <li>
+            <a class="countPage" href="#">0</a>
+          </li>
+          <li>
+            <a class="page" href="#">
+              <i class="fa fa-solid fa-rotate-right"></i>
+            </a>
+          </li>
+          <li>
+            <a class="page" href="#">
+              <i class="fa fa-solid fa-comment"></i>
+            </a>
+          </li>
+          <li>
+            <a class="page" href="#"> <i class="fa fa-solid fa-user"></i> </a>
+          </li>
+        </div>
+      </ul>
+    </nav>
+    <main>
+      <div class="profile"></div>
+    </main>
   </body>
 </html>
