--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
       <ul>
         <div class="left">
           <li>
-            <a class="logo" href=""><i class="fa fa-solid fa-leaf"></i></a>
+            <a class="logo" href="./index.html"
+              ><i class="fa fa-solid fa-leaf"></i
+            ></a>
           </li>
           <li>
-            <a class="page active" href="#">Tasks</a>
+            <a class="page active" href="./index.html">Tasks</a>
           </li>
           <li>
             <a class="page" href="#">Inventory</a>
