--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
       </ul>
     </nav>
     <main>
-      <div class="profile"></div>
+      <div class="profile">
+        ddsgsdgsddsg
+      </div>
     </main>
   </body>
 </html>
